--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                 <li>Hotline :16222</li>
                 <li>Bijoysh90777@gmail.com</li>
                 <li>Contact Us:018xxxxxxxx</li>
+                <li>&copy;2025 | OUTDOOR ADVENTURE</li>
             </ul>
         </div>
 
